Fixed achievement icon alignement

--- a/src/components/Achievement/_achievement.scss
+++ b/src/components/Achievement/_achievement.scss
@@ -2,20 +2,17 @@
 
 .achievement {
     position: absolute;
-    width: 8em;
+    width: 4em;
+    right: 2em;
     display: flex;
     justify-content: center;
-    // align-items: center;
 
     .shell {
         position: absolute;
         top: -.65em;
-        // background-color: $bg;
-        // border: 1px solid red;
         z-index: 2;
-        width: 3.5em;
+        width: 2.5em;
         border-radius: 100%;
-        // overflow: hidden;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -27,31 +24,31 @@
     }
 
     .icon {
-        width: 22em;
+        width: 18em;
 
         position: absolute;
-        top: -4.1em;
+        top: -3.7em;
         z-index: 1;
 
     }
 
     &-nudge-left {
         .shell {
-            right: 2.5em;
+            right: 1em;
         }
     }
 
     &-bigger {
         .shell {
-            width: 4.5em;
+            width: 3.5em;
             top: -1.1em;
         }
     }
 
     &-bigger-down {
         .shell {
-            width: 4.5em;
-            top: -.3em;
+            width: 3.5em;
+            top: -.5em;
         }
     }
 }
