--- a/src/screens/Main/_main.scss
+++ b/src/screens/Main/_main.scss
@@ -43,7 +43,7 @@
 
         .achievement-row {
             position: relative;
-            height: 9em;
+            height: 7em;
         }
     }
 }
